# Kylov_ev_solver

./: .gitignore  LICENSE.txt  README.md  ansatz_collocation.py  ansatz_collocation_pinv.py  ansatz_minim.py  ansatz_minimalisation.py  chebyshev_collocation.py  chebyshev_plots.py  compare_methods.py  comparison.py  dff.py  dff_test.py  equidistant_collocation.py  equidistant_plots.py  fourier_plots.py  gauss_vs_qr.py  krylov_solver.py  krylov_solver_2.py  l2_minimization.py  l2_plots.py  lst_sq_plots.py  newton.py  ngsolve.ipynb  plots.py  pyproject.toml  q_omegas.py  scalar_prod_minim.py  simulation.ipynb  sympy_test.py  test_newton.py  test_q_omega.py
before_refactoring/: A_matrix.py  Nannen.py  alpha_parser.py  ansatz_collocation.py  ansatz_minimalisation.py  comparison.py  dff.py  dff_test.py  gauss_vs_qr.py  matrix_condition.py  plots.py  q_omega_test.py
docs/: background.rst  conf.py  full.rst  index.rst  installation.rst  requirements.txt  solving.ipynb
docs/.ipynb_checkpoints/: solving-checkpoint.ipynb
latex/: bac.tex  literature.bib
obsolete scripts/: ansatz_minim.py  ansatz_poly.py  dff_random_ideas.py  q_omegas.py
src/krylovevsolver/: __init__.py  dff.py  krylov_solver.py  wave_equation.py
src/krylovevsolver/demos/: __init__.py  demo_solver.py  solver_demo.ipynb
src/krylovevsolver/tests/: solver_test.py
src/ngsaddon/: __init__.py  dff.py  krylov_solver.py  problems.py
src/ngsaddon/demos/: demo_solver.py  solver_demo.ipynb
src/ngsaddon/tests/: solver_test.py
