[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "krylovevsolver"
version = "1.0.0"

description = "Krylov eigenvalue solver for linear partial differential operators."

readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE.txt"}
keywords = []
authors = [
  {name = "Trojanowski M."}
]

dependencies = []

[project.urls]
"Homepage" = "https://github.com/Michozord/Kylov_ev_solver"
 
[tool.setuptools.packages.find]
where = ["src"]
namespaces = false