[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "krylovevsolver"
version = "1.0.0"

description = "A Krylov eigenvalue solver for linear partial differential operators."

readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE.txt"}
keywords = ["FEM", "PDE", "Krylov"]
classifiers = ["Development Status :: 3 - Alpha", 
    "License :: OSI Approved :: MIT License", 
    "Topic :: Scientific/Engineering :: Mathematics"
]
authors = [
  {name = "Trojanowski M."}
]

dependencies = ["ngsolve", "netgen", "scipy", "numpy", "matplotlib"]

[project.urls]
"Homepage" = "https://github.com/Michozord/Kylov_ev_solver"
"Documentation" = "https://kylov-ev-solver.readthedocs.io"
 
[tool.setuptools.packages.find]
where = ["src"]
namespaces = false